--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
@@ -1,4 +1,4 @@
-{{! in queryParams / CodegenParameter }}
+{{! in CodegenParameter }}
 {{^isString}}{{#trim1L}}
   ?.let {
   {{#debug}}parse non string query parameter{{/debug}}
