--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -1,23 +1,18 @@
 {{#debug}}apiMethodBodyParameters.mustache{{/debug}}
-{{#bodyParam}}val {{#bodyParam}}{{paramName}}{{/bodyParam}} = request.body {{/bodyParam}}{{!
 
-}}{{#queryParams}}
-// query parameter {{! ----------------------  queryParams ----------------------
- for keywords: baseName='data', paramName='`data`' }}
+// body parameter {{! ----------------------  bodyParam ---------------------- }}
+{{#bodyParam}}val {{#bodyParam}}{{paramName}}{{/bodyParam}} = request.body {{/bodyParam}}
+
+// query parameter {{! ----------------------  queryParams ---------------------- for keywords: baseName='data', paramName='`data`' }}
+{{#queryParams}}
+
 val {{paramName}} = request.queryParameters["{{baseName}}"]{{>parseQueryParameter}}
 {{/queryParams}}
 
+// header parameter{{! ----------------------  headerParams ----------------------}}
 {{#headerParams}}
-// header parameter {{! ----------------------  headerParams ----------------------}}
-val {{paramName}} = request.headers["{{baseName}}"] {{#trim1L}}
-{{#isEnum}}?.let{
-  {{#debug}}isEnum{{/debug}}
-  {{#isArray}}TODO()/* array of enums in header parameter */{{/isArray}}
-  {{^isArray}}{{datatypeWithEnum}}.valueOf(it) {{/isArray}}
-} {{#defaultValue}} ?: {{datatypeWithEnum}}.valueOf("{{defaultValue}}"){{/defaultValue}}
-{{/isEnum}}
-{{^isEnum}}{{#debug}}no enum{{/debug}}{{#defaultValue}} ?: {{defaultValue}}{{/defaultValue}}{{^defaultValue}}{{/defaultValue}}{{/isEnum}}
-{{/trim1L}}{{/headerParams}}
+val {{paramName}} = request.headers["{{baseName}}"]{{>parseQueryParameter}}
+{{/headerParams}}
 
 // required parameter validation
 val notSetRequiredParams = mutableSetOf<String>()
