--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/model.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/model.mustache
@@ -1,7 +1,8 @@
+{{#debug}}model.mustache{{/debug}}
 {{>licenseInfo}}
 package {{modelPackage}}
 
-{{#imports}}import {{import}}
+{{#imports}}{{#debug}}imports import{{/debug}}import {{import}}
 {{/imports}}
 
 {{#models}}
