--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -6,7 +6,7 @@
 // query parameter {{! ----------------------  queryParams ---------------------- for keywords: baseName='data', paramName='`data`' }}
 {{#queryParams}}
 
-val {{paramName}} = request.queryParameters["{{baseName}}"]{{>parseQueryParameter}}
+val {{paramName}}: {{datatypeWithEnum}}{{^datatypeWithEnum}}{{dataType}}{{/datatypeWithEnum}}{{^defaultValue}}?{{/defaultValue}} = request.queryParameters["{{baseName}}"]{{>parseQueryParameter}}
 {{/queryParams}}
 
 // header parameter{{! ----------------------  headerParams ----------------------}}
