feat: use constructor for numeric default values

--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/data_class_opt_var.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/data_class_opt_var.mustache
@@ -1,4 +1,13 @@
 {{#description}}
-    /* {{{.}}} */
+  /* {{{.}}} */
 {{/description}}
-    {{>modelMutable}} {{{name}}}: {{#isEnum}}{{classname}}.{{nameInCamelCase}}{{/isEnum}}{{^isEnum}}{{{dataType}}}{{/isEnum}}? = {{{defaultValue}}}{{^defaultValue}}null{{/defaultValue}}
+{{>modelMutable}} {{{name}}}: {{#isEnum}}{{classname}}.{{nameInCamelCase}}{{/isEnum}}{{^isEnum}}{{{dataType}}}{{/isEnum}}? =
+{{#trim1L}}
+  {{#isNumeric}}{{#defaultValue}}
+    {{dataType}}({{defaultValue}})
+  {{/defaultValue}}{{/isNumeric}}
+  {{^isNumeric}}
+    {{{defaultValue}}}
+  {{/isNumeric}}
+  {{^defaultValue}}null{{/defaultValue}}
+{{/trim1L}}
