feat: ignore cookie parameters. add numeric query parameters. add file exclusions

--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiMethodBodyParameters.mustache
@@ -14,6 +14,12 @@ val {{paramName}}: {{datatypeWithEnum}}{{^datatypeWithEnum}}{{dataType}}{{/datat
 val {{paramName}} = request.headers["{{baseName}}"]{{>parseQueryParameter}}
 {{/headerParams}}
 
+// cookie parameter{{! ----------------------  cookieParams ----------------------}}
+{{#cookieParams}}
+  val {{paramName}} = TODO() /* implement how to handle cookie parameters */
+{{/cookieParams}}
+
+
 // required parameter validation
 val notSetRequiredParams = mutableSetOf<String>()
 {{#allParams}}{{^defaultValue}}{{#required}}
