--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
@@ -17,6 +17,9 @@
   {{#isNumeric}}
     {{dataType}}.parse(it)
   {{/isNumeric}}
+  {{#isNumber}}
+    {{dataType}}(it)
+  {{/isNumber}}
   {{#isInteger}}
       it.toInt()
   {{/isInteger}}
