feat: add TODO for map query parameters

--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
@@ -39,10 +39,13 @@
     {{#debug}}a hidden enum{{/debug}}
     {{>smartDataType}}.valueOf(it){{#debug}}hiddenEnum{{/debug}}
   {{/hiddenEnum}}
-  {{#schema}}{{#isModel}}
+  {{#schema}}{{#isModel}}{{^isArray}}{{^isMap}}
       TODO() /* no object support in query parameters */
-  {{/isModel}}{{/schema}}
+  {{/isMap}}{{/isArray}}{{/isModel}}{{/schema}}
+
   {{#isArray}}TODO()/* array of strings */{{/isArray}}
+  {{#isMap}}TODO()/* map of strings */{{/isMap}}
+
   }
 {{/trim1L}}{{/isString}}{{/isUuid}}
 
