fix: default value for primitive numerics

--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/data_class_opt_var.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/data_class_opt_var.mustache
@@ -5,7 +5,12 @@
 
   {{#isNumeric}}{{#defaultValue}}
     {{#debug}}Numeric with default{{/debug}}
-    {{dataType}}({{defaultValue}})
+    {{^isPrimitiveType}}
+      {{dataType}}({{defaultValue}})
+    {{/isPrimitiveType}}
+    {{#isPrimitiveType}}
+      {{defaultValue}}
+    {{/isPrimitiveType}}
   {{/defaultValue}}{{/isNumeric}}
   {{^isNumeric}}
 
