--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiInterface.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiInterface.mustache
@@ -1,8 +1,11 @@
 package {{package}}
 {{#debug}}apiInterface.mustache{{/debug}}
 
+{{#debug}}== iterated imports =={{/debug}}
 {{#imports}}import {{import}}
 {{/imports}}
+
+{{#debug}}== manual imports =={{/debug}}
 import kotlin.collections.List
 import kotlin.collections.Map
 
