--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/enum_class.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/enum_class.mustache
@@ -5,11 +5,15 @@
 {{#isDeprecated}}
 @Deprecated(message = "This enum is deprecated.")
 {{/isDeprecated}}
-enum class {{classname}}(val value:
+enum class {{classname}}({{#trim1L}}val value:
 {{^isArray}}{{dataType}}{{/isArray}}
 {{#isArray}}{{#items}}{{dataType}}{{/items}}{{/isArray}}
-) { {{#debug}}enum_class enum{{/debug}}
+){{/trim1L}} {
+{{#debug}}enum_class enum{{/debug}}
 {{#allowableValues}}{{#enumVars}}
-  {{#orEMPTY}}{{&name}}{{/orEMPTY}}({{{value}}}){{^-last}},{{/-last}}{{#-last}};{{/-last}}
+  {{#orEMPTY}}{{&name}}{{/orEMPTY}}{{#trim1L}}(
+  {{#isString}}{{{value}}}{{/isString}}
+  {{^isString}}{{#rmQuotation}}{{{value}}}{{/rmQuotation}}{{/isString}}
+  ){{^-last}},{{/-last}}{{#-last}};{{/-last}}{{/trim1L}}
 {{/enumVars}}{{/allowableValues}}
 }
