fix: handle empty variable name

--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/data_class_opt_var.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/data_class_opt_var.mustache
@@ -1,7 +1,7 @@
 {{#description}}
   /* {{{.}}} */
 {{/description}}
-{{>modelMutable}} {{{name}}}: {{#isEnum}}{{classname}}.{{nameInCamelCase}}{{/isEnum}}{{^isEnum}}{{{dataType}}}{{/isEnum}}? = {{#trim1L}}
+{{>modelMutable}} {{#orEMPTY}}{{{name}}}{{/orEMPTY}}: {{#isEnum}}{{classname}}.{{nameInCamelCase}}{{/isEnum}}{{^isEnum}}{{{dataType}}}{{/isEnum}}? = {{#trim1L}}
 
   {{#isNumeric}}{{#defaultValue}}
     {{#debug}}Numeric with default{{/debug}}
