--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/data_class_req_var.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/data_class_req_var.mustache
@@ -1,4 +1,4 @@
 {{#description}}
     /* {{{.}}} */
 {{/description}}
-    {{>modelMutable}} {{{name}}}: {{#isEnum}}{{classname}}.{{nameInCamelCase}}{{/isEnum}}{{^isEnum}}{{{dataType}}}{{/isEnum}}
+    {{>modelMutable}} {{#orEMPTY}}{{{name}}}{{/orEMPTY}}: {{#isEnum}}{{classname}}.{{nameInCamelCase}}{{/isEnum}}{{^isEnum}}{{{dataType}}}{{/isEnum}}
