fix: inverse hiddenEnum

--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
@@ -1,6 +1,7 @@
 {{! in CodegenParameter }}
 {{#isUuid}}
   ?.let{
+    {{#debug}}isUuid{{/debug}}
     {{dataType}}.fromString(it)
   }
 {{/isUuid}}
@@ -62,6 +63,7 @@
 {{#defaultValue}}
     {{#trim1L}}
     ?:
+    {{#debug}}defaultValue{{/debug}}
     {{#isEnum}}
       {{#getSchema}}{{defaultValue}}{{/getSchema}}{{#debug}}defaultValue.isEnum{{/debug}}
     {{/isEnum}}
