--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/parseQueryParameter.mustache
@@ -6,6 +6,13 @@
   }
 {{/isUuid}}
 
+{{#schema}}{{#isUri}}
+  ?.let{
+    {{#debug}}isUri{{/debug}}
+    {{dataType}}.create(it)
+  }
+{{/isUri}}{{/schema}}
+
 {{^isUuid}}{{^isString}}{{#trim1L}}
   ?.let {
   {{#debug}}parse non string query parameter{{/debug}}
