--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/enum_class.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/enum_class.mustache
@@ -12,8 +12,15 @@ enum class {{classname}}({{#trim1L}}val value:
 {{#debug}}enum_class enum{{/debug}}
 {{#allowableValues}}{{#enumVars}}
   {{#orEMPTY}}{{&name}}{{/orEMPTY}}{{#trim1L}}(
-  {{#isString}}{{{value}}}{{/isString}}
-  {{^isString}}{{#rmQuotation}}{{{value}}}{{/rmQuotation}}{{/isString}}
+  {{#isString}}{{#debug}}string{{/debug}}{{{value}}}{{/isString}}
+  {{^isString}}{{#debug}}non-string{{/debug}}
+    {{#isNumber}}
+      {{dataType}}({{#rmQuotation}}{{{value}}}{{/rmQuotation}})
+    {{/isNumber}}
+    {{^isNumber}}
+      {{#rmQuotation}}{{{value}}}{{/rmQuotation}}
+    {{/isNumber}}
+  {{/isString}}
   ){{^-last}},{{/-last}}{{#-last}};{{/-last}}{{/trim1L}}
 {{/enumVars}}{{/allowableValues}}
 }
