--- a/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiInterface.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-azure-function-app/apiInterface.mustache
@@ -2,7 +2,8 @@ package {{package}}
 {{#debug}}apiInterface.mustache{{/debug}}
 
 {{#debug}}== iterated imports =={{/debug}}
-{{#imports}}import {{import}}
+{{#imports}}
+  import {{import}}
 {{/imports}}
 
 {{#debug}}== manual imports =={{/debug}}
